# ChangeLog for media-plugins/gst-plugins-gnomevfs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-gnomevfs/ChangeLog,v 1.133 2009/05/03 17:35:31 klausman Exp $

  03 May 2009; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-gnomevfs-0.10.22.ebuild:
  Stable on alpha, bug #266986

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-gnomevfs-0.10.20.ebuild:
  arm/sh stable wrt #232054

*gst-plugins-gnomevfs-0.10.22 (30 Mar 2009)

  30 Mar 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-gnomevfs-0.10.22.ebuild:
  Version bump

*gst-plugins-gnomevfs-0.10.21 (05 Dec 2008)

  05 Dec 2008; <ssuominen@gentoo.org> +gst-plugins-gnomevfs-0.10.21.ebuild:
  Version bump.

  23 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-gnomevfs-0.10.20.ebuild:
  Stable for HPPA (bug #232054).

  08 Aug 2008; Markus Meier <maekke@gentoo.org>
  gst-plugins-gnomevfs-0.10.20.ebuild:
  x86 stable, bug #232054

  07 Aug 2008; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-gnomevfs-0.10.20.ebuild:
  Stable on alpha, bug #232054

  31 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-gnomevfs-0.10.20.ebuild:
  ia64/sparc stable wrt #232054

  01 Aug 2008; Brent Baude <ranger@gentoo.org>
  gst-plugins-gnomevfs-0.10.20.ebuild:
  Marking gst-plugins-gnomevfs-0.10.20 ppc64 stable for bug 232054

  30 Jul 2008; Brent Baude <ranger@gentoo.org>
  gst-plugins-gnomevfs-0.10.20.ebuild:
  Marking gst-plugins-gnomevfs-0.10.20 ppc stable for bug 232054

  26 Jul 2008; Olivier Crête <tester@gentoo.org>
  gst-plugins-gnomevfs-0.10.20.ebuild:
  Stable on amd64, bug #232054

*gst-plugins-gnomevfs-0.10.20 (29 Jun 2008)

  29 Jun 2008; Samuli Suominen <drac@gentoo.org>
  +gst-plugins-gnomevfs-0.10.20.ebuild:
  Version bump.

*gst-plugins-gnomevfs-0.10.17 (01 Feb 2008)

  01 Feb 2008; Samuli Suominen <drac@gentoo.org>
  -gst-plugins-gnomevfs-0.10.11.ebuild,