@@ -1,6 +1,8 @@
 DIST gst-plugins-base-0.10.21.tar.bz2 1982446 RMD160 4fa9056c8cc5d21db30074596831ffc14f6b671b SHA1 ae83b3306f52aa3affd014dade30c6cd5c2baa66 SHA256 673f4a45a0f3aa99606a58097bde02d09ad51d7b2e702f0d68eeb6db21d47e93
 DIST gst-plugins-base-0.10.22.tar.bz2 2118085 RMD160 013de77422d6e89b64cf55ff7299b0ff1e38ef8a SHA1 8e6a894858f5412234ce1591bbb773102c150cb7 SHA256 184c5aed03ebfe38a276fc03cb7d8685d9a6da5a48bf6a0565c83e11a29cd5f9
+DIST gst-plugins-base-0.10.23.tar.bz2 2126280 RMD160 3b08bdeeb5237fb0e6e918ac5d6a97064fa8fe98 SHA1 f0b66ddca22187c8011b37a5d806c7dc7e68b7f1 SHA256 1c11d98eb9a1b1bc54becf465e74c2aa4019bb57a31dd70686269af6a9b9e93b
 EBUILD gst-plugins-gnomevfs-0.10.21.ebuild 509 RMD160 93d24bd9c0baba17da69a4d5dffb1f37ad5cc235 SHA1 05775280ee9ee90333eea9dd747d32d22c07f641 SHA256 3927e33c1ec12806f46c9183bb34ca2d8fb5586841689fcdac3b8ff191af6802
 EBUILD gst-plugins-gnomevfs-0.10.22.ebuild 508 RMD160 495275d8da63d70fe1d0a5cdd895a299e3ed1220 SHA1 e7373e7577ec3567cf610f8315d0a46b76ee278a SHA256 6f1e1fb5e712f5b573ea23e0ae489db263a33f593a1fa6c11eb1ca96e911ba28
-MISC ChangeLog 16450 RMD160 3295f0311a145dfceccc3a639eda027b3a9963df SHA1 b04d18c478b06c93f331f02e8ec85efb42644568 SHA256 d4cf8e3558dc1a8d4fb7cd6e3c758d3122c9539b4959a1be124a2011b12f1bec
+EBUILD gst-plugins-gnomevfs-0.10.23.ebuild 506 RMD160 a241e07c7dd5f79426f6ebaaf5d8cf1d55a8fddf SHA1 4368cf3ca05270f827ec338164fcfe29bbf0556d SHA256 04192a8942f30700b6e28ec7a56927b84fa81269ea09598000affd4ae1bc8c72
+MISC ChangeLog 16599 RMD160 0070a460227500b8406d4a830cd4992e6baba3e9 SHA1 54f68bd3e61a68e308da43af1c02377a2efff672 SHA256 1414bf0b12e8a1b25ffebe68f4892010dc84cedd205395aa1a0231cd024dfdf8
 MISC metadata.xml 181 RMD160 51814fbdcf7f32cfe70018b3af7fc798e41ff90d SHA1 faf40c45bd66b0072b95556cf7ab097d3be19511 SHA256 22c215902ccdc7fd8cdb765750fb23ea9d9b6c9d3edb1b45325c3469f8f6ffc5
