@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gst-plugins-gnomevfs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-gnomevfs/ChangeLog,v 1.133 2009/05/03 17:35:31 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-gnomevfs/ChangeLog,v 1.134 2009/05/11 03:19:42 tester Exp $
+
+*gst-plugins-gnomevfs-0.10.23 (11 May 2009)
+
+  11 May 2009; Olivier Crête <tester@gentoo.org>
+  +gst-plugins-gnomevfs-0.10.23.ebuild:
+  Version bump
 
   03 May 2009; Tobias Klausmann <klausman@gentoo.org>
   gst-plugins-gnomevfs-0.10.22.ebuild:
